@@ -4,7 +4,8 @@ v1.5 - Pending
 	+ Add menu items and shortcuts for playing library items after add/replace
 	+ Stylized album art with cases (Aidan)
 	+ Show untagged artists/genres in their respective library views
-	+ Allow drag-n-drop of cover art from a web browser (Артем)
+	+ Allow DND of cover art from a web browser (Артем)
+	+ Allow DND of music from a file manager into playlist (requires mpd 0.14)
 	+ Switch back to last tab on second cover art click
 	+ Retain selection in lists after removing items
 	+ Hidden config option to expand notebook tabs (tabs_expanded)
